[package]
name = "flav-md-wasm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.5"
once_cell = "1.9.0"
pretty_assertions = { version= "1.0.0", default-features = false, features = ["alloc"] }
