[package]
name = "flav-md-engine"
version = "0.1.0"
edition = "2021"
license-file = "LICENSE"
authors = ["Jiko21 <sos.daiki.keion@gmail.com>"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.5"
once_cell = "1.9.0"
pretty_assertions = { version= "1.0.0", default-features = false, features = ["alloc"] }
wasm-bindgen = "0.2.63"
console_error_panic_hook = { version = "0.1.6", optional = true }
wee_alloc = { version = "0.4.5", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.3.13"

[lib]
crate-type = ["cdylib", "rlib"]
